--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - '8080:80'
     volumes:
       - .:/var/www/eps.hcaa.org.br
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /var/www/eps.hcaa.org.br
     links:
       - php-fpm
