--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/scout": "^10.14",
         "laravel/tinker": "^2.10.1",
         "php-ffmpeg/php-ffmpeg": "^1.3",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "tabuna/breadcrumbs": "^4.3"
     },
     "require-dev": {
