--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.10.1",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "tabuna/breadcrumbs": "^4.3"
+        "tabuna/breadcrumbs": "^4.3",
+        "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
