--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,33 @@ services:
       - .:/var/www/eps.hcaa.org.br
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /var/www/eps.hcaa.org.br
-    links:
-      - php-fpm
+    depends_on:
+      php-fpm:
+        condition: service_started
+
   php-fpm:
     container_name: php-fpm
     build: .
     volumes:
       - .:/var/www/eps.hcaa.org.br
     working_dir: /var/www/eps.hcaa.org.br
-    command: bash -c "php artisan migrate:fresh --seed && php-fpm"
+    command: php-fpm
+    depends_on:
+      postgres:
+        condition: service_healthy
+
   postgres:
     container_name: postgres
     image: postgres:17-alpine
     restart: always
     ports:
-      - 5432:5432
+      - '5432:5432'
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
-  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
