--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,3 +1,6 @@
 ; php.ini
+zend_extension=xdebug
+xdebug.mode=coverage
+xdebug.start_with_request=off
 upload_max_filesize = 100M
 post_max_size = 100M
