--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,6 +10,11 @@ server {
 
     client_max_body_size 100M; 
 
+    location /coverage-report/ {
+        alias /var/www/eps.hcaa.org.br/coverage-report/;
+        try_files $uri $uri/ /index.html =404;
+    }
+
     location / {
         try_files $uri /index.php?$args;
     }
