--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,6 +1,11 @@
 ; php.ini
-zend_extension=xdebug
-xdebug.mode=coverage
+zend_extension=xdebug 
+xdebug.mode=coverage 
 xdebug.start_with_request=off
-upload_max_filesize = 100M
-post_max_size = 100M
+file_uploads = On
+max_file_uploads = 20
+upload_max_filesize = 350M
+post_max_size = 350M
+max_execution_time = 300
+max_input_time = 300
+memory_limit = 512M
