--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ services:
     container_name: webserver
     image: nginx:latest
     ports:
-      - '8080:80'
+      - '80:80'
+      - "443:443"
     volumes:
       - .:/var/www/eps.hcaa.org.br
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/certs:/etc/nginx/certs
     working_dir: /var/www/eps.hcaa.org.br
     depends_on:
       php-fpm:
