--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,14 +1,22 @@
 server {
     listen 80;
-    root /var/www/eps.hcaa.org.br/public;
+    server_name localhost;
+    return 301 https://$host$request_uri;
+}
 
-    #ssl_certificate /app/cert.pem;
-    #ssl_certificate_key /app/key.pem;
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    root /var/www/eps.hcaa.org.br/public;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
-    client_max_body_size 350M; 
+    client_max_body_size 350M;
 
     location /coverage-report/ {
         alias /var/www/eps.hcaa.org.br/coverage-report/;
