--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,30 +1,27 @@
 server {
     listen 80;
-    server_name localhost;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
+
     server_name localhost;
 
     ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    root /var/www/eps.hcaa.org.br/public;
+    root /var/www/peps.hcaa.org.br/public;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
     client_max_body_size 350M;
+    index index.php;
 
     location /coverage-report/ {
-        alias /var/www/eps.hcaa.org.br/coverage-report/;
+        alias /var/www/peps.hcaa.org.br/coverage-report/;
         try_files $uri $uri/ /index.html =404;
     }
 
     location / {
-        try_files $uri /index.php?$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -37,7 +34,11 @@ server {
     }
 
     location /storage/ {
-        alias /var/www/eps.hcaa.org.br/storage/app/public/;
+        alias /var/www/peps.hcaa.org.br/storage/app/public/;
         try_files $uri $uri/ =404;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 }
